Project

General

Profile

Actions

Bug #4510

closed

Lose SIOC*IPSECONFIG ioctl definitions

Added by Dan McDonald over 9 years ago. Updated over 9 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
kernel
Start date:
2014-01-19
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

While searching around for something else, I encountered these crufty artifacts from pre-Solaris-9.

Let's get rid of 'em once and for all.

Actions #1

Updated by Robert Mustacchi over 9 years ago

  • Category set to kernel
  • Status changed from New to Resolved
  • Assignee set to Dan McDonald
  • % Done changed from 0 to 100
  • Tags deleted (needs-triage)

Resolved in 843ea7097d26ad78b15935c6a5e1bbafc8f9af90.

Actions

Also available in: Atom PDF