4510 Lose SIOC*IPSECONFIG ioctl definitions Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Saso Kiselkov <skiselkov.ml@gmail.com> Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Approved by: Robert Mustacchi <rm@joyent.com>