usr/src/uts/common/inet/ip/ip_if.c
@@ -22,6 +22,7 @@
  * Copyright (c) 1991, 2010, Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 1990 Mentat Inc.
  * Copyright (c) 2013 by Delphix. All rights reserved.
+ * Copyright (c) 2014, OmniTI Computer Consulting, Inc. All rights reserved.
  */
 
 /*
@@ -9189,7 +9190,9 @@ ip_sioctl_copyin_setup(queue_t *q, mblk_t *mp)
 		return;
 
 	default:
-		cmn_err(CE_PANIC, "should not happen ");
+		cmn_err(CE_WARN, "Unknown ioctl %d/0x%x slipped through.",
+		    iocp->ioc_cmd, iocp->ioc_cmd);
+		/* FALLTHRU */
 	}
 nak:
 	if (mp->b_cont != NULL) {
